<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/dialog_bg"
    android:orientation="vertical">

    <TextView
        android:id="@+id/textView8"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/dialog_URL_title"
        android:textAlignment="center"
        android:textSize="22sp" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/dialog_URL_field"
        android:textAlignment="center" />

    <EditText
        android:id="@+id/dialog_URL_field"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:contentDescription="@string/dialog_URL_placeholder"
        android:ems="10"
        android:hint="@string/dialog_URL_placeholder"
        android:inputType="text"
        android:textColorHighlight="?android:attr/colorPrimaryDark"
        android:textColorLink="?android:attr/colorPrimary" />

    <Button
        android:id="@+id/dialog_URLbtnValidate"
        android:layout_width="42dp"
        android:layout_height="42dp"
        android:layout_gravity="right"
        android:background="@drawable/validate_btn"
        android:gravity="right" />
</LinearLayout>