<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/dialog_bg"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/dialog_addRappel_title"
        android:textAlignment="center"
        android:textSize="22sp"
        android:textStyle="bold" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/dialog_addRappel_info"
        android:textAlignment="center"
        android:textSize="18sp" />

    <Spinner
        android:id="@+id/dialog_addRappel_combobox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:entries="@array/rappelsArray"
        android:textAlignment="center" />

    <EditText
        android:id="@+id/dialog_addRappel_nom"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/dialog_bg"
        android:ems="10"
        android:hint="@string/dialog_addRappel_hint"
        android:inputType="textPersonName" />

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/dialog_addRappel_btnClose"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="top|left"
            android:clickable="true"
            android:foregroundGravity="top|left"
            android:foregroundTint="#FFFFFF"
            app:backgroundTint="#F80000"
            app:maxImageSize="42sp"
            app:srcCompat="@android:drawable/ic_menu_close_clear_cancel" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/dialog_addRappel_btnNext"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="right|top"
            android:clickable="true"
            android:foregroundGravity="top|right"
            app:backgroundTint="#3FA810"
            app:srcCompat="@drawable/ic_arrow_forward_black_24dp" />
    </FrameLayout>


</LinearLayout>